# rust-protobuf

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  .travis.yml-disabled  BUGREPORTING.md  CHANGELOG-before-3.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  Makefile  README.md  install-protobuf.sh  publish-all.sh
perftest/: Cargo.toml  build-perftest-rust.sh  build.rs  perftest_data.proto
perftest/bytes/: Cargo.toml  build.rs
perftest/bytes/benches/: vs.rs
perftest/bytes/src/: .gitignore  lib.rs  messages.proto
perftest/misc/: Cargo.toml  build.rs
perftest/misc/src/: lib.rs
perftest/vs-cxx/: .gitignore  Cargo.toml  build-perftest-data.sh  build.rs  perftest.rs
protobuf/: Cargo.toml  README.md  build.rs  full-rebuild.sh  protobuf-bin-gen-rust-do-not-use.rs  protoc-gen-rust.rs  regenerate.sh  regenerate_if_proto3.sh
protobuf-codegen/: Cargo.toml  README.md
protobuf-codegen-identical-test/: Cargo.toml
protobuf-codegen-identical-test/tests/: diff.rs
protobuf-codegen-pure/: Cargo.toml  README.md
protobuf-codegen-pure-test/: Cargo.toml  build.rs
protobuf-codegen-pure-test/src/: lib.rs
protobuf-codegen-pure-test/src/v2/: mod.rs  test_default_values.rs  test_first.rs  test_first_pb.proto  test_import_nested_imported_pb.proto  test_import_nonunique_2_pb.proto  test_special~characters file{name}_pb.proto
protobuf-codegen-pure-test/tests/: diff.rs
protobuf-codegen-pure/src/: convert.rs  float.rs  lib.rs  linked_hash_map.rs  model.rs  parse_and_typecheck.rs  parse_dependencies.rs  parser.rs  path.rs  rel_path.rs  str_lit.rs  test_against_protobuf_protos.rs
protobuf-codegen-pure/src/proto/: mod.rs
protobuf-codegen-pure/tests/: bundled_proto_consistent.rs
protobuf-codegen/src/: amend_io_error_util.rs  case_convert.rs  code_writer.rs  compiler_plugin.rs  customize.rs  descriptorx.rs  enums.rs  extensions.rs  field.rs  file.rs  file_and_mod.rs  file_descriptor.rs  gen_and_write.rs  ident.rs  inside.rs  lib.rs  logging.rs  map.rs  message.rs  oneof.rs  proto_path.rs  protobuf_abs_path.rs  protobuf_ident.rs  protobuf_name.rs  protobuf_path.rs  protobuf_rel_path.rs  protoc_gen_rs.rs  protoc_gen_rust.rs  rust.rs  rust_name.rs  rust_types_values.rs  scope.rs  serde.rs  strx.rs  well_known_types.rs
protobuf-codegen/src/codegen/: mod.rs  protoc.rs  pure.rs
protobuf-codegen/src/customize/: by_path.rs  ctx.rs  custom_attr.rs  mod.rs  rustproto_proto.rs
protobuf-codegen/src/field/: accessor.rs  mod.rs
protobuf-codegen/src/rust_ast/: attr.rs  field.rs  mod.rs
protobuf-examples/: .travis.yml  Cargo.toml  README.md  build.rs
protobuf-examples/customize/: Cargo.toml  build.rs
protobuf-examples/customize-serde/: Cargo.toml  README.md  build.rs
protobuf-examples/customize-serde/src/: customize_example.proto  lib.rs
protobuf-examples/customize/src/: lib.rs
protobuf-examples/dynamic/: Cargo.toml  README.md
protobuf-examples/dynamic/src/: main.rs
protobuf-examples/end-to-end/: Cargo.toml  README.md  build.rs
protobuf-examples/end-to-end/src/: main.rs
protobuf-examples/issue-614/: Cargo.toml  build.rs  foos.proto
protobuf-examples/issue-614/examples/: example-issue-614.rs
protobuf-examples/pure-vs-protoc/: Cargo.toml  README.md  build.rs
protobuf-examples/src/: main.rs
protobuf-examples/vs-prost/: Cargo.toml  README.md  build.rs
protobuf-fuzz/: Cargo.toml  build.rs
protobuf-fuzz/fuzz/: Cargo.toml
protobuf-fuzz/src/: all_types_pb.proto  lib.rs
protobuf-json-mapping/: Cargo.toml  README.md
protobuf-json-mapping/src/: base64.rs  float.rs  lib.rs  parse.rs  print.rs  rfc_3339.rs  well_known_wrapper.rs
protobuf-parse/: Cargo.toml  LICENSE.txt  README.md
protobuf-parse/examples/: file-descriptor-out-compare.rs
protobuf-parse/src/: case_convert.rs  convert.rs  lib.rs  model.rs  parse_and_typecheck.rs  parse_dependencies.rs  parser.rs  path.rs  proto_path.rs  protobuf_abs_path.rs  protobuf_ident.rs  protobuf_path.rs  protobuf_rel_path.rs  rel_path.rs  test_against_protobuf_protos.rs  which_parser.rs
protobuf-parse/tests/: bundled_proto_consistent.rs
protobuf-serde/: Cargo.toml
protobuf-serde/src/: lib.rs
protobuf-support/: Cargo.toml  README.md
protobuf-support/src/: lib.rs  text_format.rs  toposort.rs
protobuf-test/: .gitignore  Cargo.toml  README.md  build.rs  test.sh
protobuf-test-common/: Cargo.toml
protobuf-test-common/src/: build.rs  dynamic.rs  hex.rs  interop.rs  json_tests.rs  lib.rs  reflect_tests.rs  serialize_deserialize_both.rs  serialize_deserialize_dynamic.rs  serialize_deserialize_tests.rs  test.rs  text_format_tests.rs
protobuf-test/src/: lib.rs  test.rs
protobuf/benches/: coded_input_stream.rs  coded_output_stream.rs  write.rs
protobuf/src/: any.rs  arc_or_static.rs  buf_read_iter.rs  buf_read_or_reader.rs  byteorder.rs  bytes_iterator_reader.rs  cached_size.rs  chars.rs  code_writer.rs  coded_input_stream.rs  coded_output_stream.rs  compiler_plugin.rs  core.rs  descriptor.rs  descriptorx.rs  doctest_pb.rs  enum_full.rs  enum_or_unknown.rs  enums.rs  error.rs  ext.rs  ext_new.rs  fixed.rs  lazy.rs  lazy_v2.rs  lib.rs  map.rs  message.rs  message_dyn.rs  message_field.rs  message_full.rs  misc.rs  new_lazy.rs  oneof.rs  oneof_full.rs  owning_ref.rs  paginate.rs  plugin.rs  prelude.rs  repeated.rs  (+14 more)
protoc/: Cargo.toml  README.md  test.sh  update-bin.sh
protoc-bin/: Cargo.toml
protoc-bin-vendored/: Cargo.toml  README.md  update-bin.sh  version.txt
protoc-bin-vendored/src/: lib.rs
protoc-bin-vendored/tests/: protoc-crate-compat.rs
protoc-bin/src/: lib.rs
protoc-rust/: Cargo.toml  README.md
protoc-rust/src/: lib.rs  slashes.rs
protoc/src/: lib.rs
protoc/test-protoc/: Cargo.toml  build.rs
src/perftest/: Cargo.toml  build-perftest-cxx.sh  build-perftest-rust.sh  build-perftest.sh  perftest-cxx.cxx  perftest.rs  perftest_data.pbtxt  perftest_data.proto  perftest_data.rs
test-crates/conformance/: Cargo.toml  build.rs
test-crates/protobuf-codegen-pure-test/: Cargo.toml  README.md  build.rs
test-crates/protobuf-fuzz/: Cargo.toml  build.rs
(+751 files in other folders)
