[workspace]
resolver = "2"
members = [
    "ci-gen",
    "protoc-bin",
    # Exclude test-protoc from the project, because it depends on binary
    #"protoc/test-protoc",
    "protobuf",
    "protobuf-codegen",
    "protobuf-examples/customize-serde",
    "protobuf-examples/dynamic",
    "protobuf-examples/pure-vs-protoc",
    "protobuf-examples/vs-prost",
    "protobuf-parse",
    "test-crates/perftest/bytes",
    "test-crates/perftest/misc",
    "test-crates/perftest/vs-cxx",
    "test-crates/protobuf-codegen-identical-test",
    "test-crates/protobuf-codegen-pure-test",
    "test-crates/protobuf-fuzz",
    "test-crates/protobuf-test",
    "test-crates/protobuf-test-common",
]
