[workspace]
resolver = "2"
members = [
    "ci-gen",
    "protoc-bin",
    "protobuf",
    "protobuf-codegen",
    "protobuf-examples/customize-serde",
    "protobuf-examples/dynamic",
    "protobuf-examples/pure-vs-protoc",
    "protobuf-examples/vs-prost",
    "protobuf-parse",
    "protobuf-support",
    "test-crates/perftest/bytes",
    "test-crates/perftest/misc",
    "test-crates/perftest/vs-cxx",
    "test-crates/protobuf-codegen-identical-test",
    "test-crates/protobuf-codegen-pure-test",
    "test-crates/protobuf-parse-error-test",
    "test-crates/protobuf-fuzz",
    "test-crates/protobuf-test",
    "test-crates/protobuf-test-common",
]
