[workspace]
resolver = "2"
members = [
    "ci-gen",
    "protoc-bin",
    "protobuf",
    "protobuf-json-mapping",
    "protobuf-codegen",
    "protobuf-examples/customize-serde",
    "protobuf-examples/dynamic",
    "protobuf-examples/pure-vs-protoc",
    "protobuf-examples/vs-prost",
    "protobuf-examples/issue-614",
    "protobuf-parse",
    "protobuf-support",
    "test-crates/perftest/bytes",
    "test-crates/perftest/misc",
    "test-crates/perftest/vs-cxx",
    "test-crates/protobuf-codegen-btreemap-test",
    "test-crates/protobuf-codegen-identical-test",
    "test-crates/protobuf-codegen-protoc-test",
    "test-crates/protobuf-codegen-pure-test",
    "test-crates/protobuf-parse-error-test",
    "test-crates/protobuf-fuzz",
    "test-crates/protobuf-test",
    "test-crates/protobuf-test-common",
]
