[project]
name = "rust-protobuf-perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[features]
default-features = []
proto3 = []
with-bytes = ["protobuf/with-bytes"]

[dependencies.protobuf]
path = "../protobuf"

[dependencies.time]
git = "http://github.com/rust-lang/time"

[dependencies]
rand = "0.*"

[[bin]]

name = "rust-protobuf-perftest"
path = "perftest.rs"
test = false
