[package]
name = "protobuf-codegen-identical-test"
version = "0.0.0"
authors = ["Nikhil Benesch <nikhil.benesch@gmail.com>"]
publish = false
edition = "2018"
description = "Test protoc-based and pure rust codegen produce identical output"

[lib]
test = false
doctest = false

[dev-dependencies]
tempfile = "3"
regex = "1.3.9"

protobuf = { path = "../protobuf" }
protobuf-codegen = { path = "../protobuf-codegen" }
protobuf-test-common = { path = "../protobuf-test-common" }
protoc = { path = "../protoc" }
protoc-bin-vendored = { path = "../protoc-bin-vendored" }
protobuf-parse = { path = "../protobuf-parse" }
