[package]
name = "protobuf-codegen-pure-test"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false

[lib]
doctest = false

[features]
default-features = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes", "protobuf-test-common/with-bytes"]

[build-dependencies]
protobuf-codegen-pure = { path = "../protobuf-codegen-pure" }
protobuf-test-common = { path = "../protobuf-test-common" }
glob        = "0.2"
log         = "0.*"
env_logger  = "0.5.*"

[dependencies]
protobuf-test-common = { path = "../protobuf-test-common" }

[dependencies.protobuf]
path = "../protobuf"

[dependencies.bytes]
version = "0.*"
optional = true
