[package]
name = "protobuf-codegen-pure"
version = "3.0.0-pre"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen-pure/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen-pure/"
description = """
Pure-rust codegen for protobuf using protobuf-parser crate

WIP
"""

[lib]
doctest = false
bench = false

[dependencies]
protobuf = { path = "../protobuf", version = "=3.0.0-pre" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=3.0.0-pre" }

[[bin]]

name = "parse-and-typecheck"
path = "src/bin/parse-and-typecheck.rs"
test = false

[package.metadata.docs.rs]
all-features = true
