[package]
name = "protobuf-codegen-pure"
version = "2.8.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen-pure/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen-pure/"
description = """
Pure-rust codegen for protobuf using protobuf-parser crate

WIP
"""

[lib]
doctest = false
bench = false

[dependencies]
protobuf = { path = "../protobuf", version = "=2.8.0" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=2.8.0" }

[[bin]]

name = "parse-and-typecheck"
path = "src/bin/parse-and-typecheck.rs"
test = false

[package.metadata.docs.rs]
all-features = true
