[package]
name = "protobuf-codegen-pure"
version = "3.0.0-alpha.2"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen-pure/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protobuf-codegen-pure/"
description = """
Pure-rust codegen for protobuf using protobuf-parser crate

WIP
"""

[lib]
doctest = false
bench = false

[dependencies]
anyhow    = "1.0.44"
thiserror = "1.0.30"

protobuf = { path = "../protobuf", version = "=3.0.0-alpha.2" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=3.0.0-alpha.2" }
protobuf-parse = { path = "../protobuf-parse", version = "=3.0.0-alpha.2" }

[package.metadata.docs.rs]
all-features = true
