[package]
name = "protobuf-codegen"
version = "2.8.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Code generator for rust-protobuf.

Includes a library and `protoc-gen-rust` binary.

See `protoc-rust` and `protobuf-codegen-pure` crates.
"""

[lib]
bench = false

[dependencies]
protobuf = { path = "../protobuf", version = "=2.8.0" }

[[bin]]

name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust.rs"
test = false

[[bin]]

name = "protobuf-bin-gen-rust-do-not-use"
path = "src/bin/protobuf-bin-gen-rust-do-not-use.rs"
test = false

[package.metadata.docs.rs]
all-features = true
