[package]
name = "protobuf-codegen"
version = "3.0.0-alpha.5"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Code generator for rust-protobuf.

Includes a library to invoke programmatically (e. g. from `build.rs`) and `protoc-gen-rust` binary.
"""

[lib]
bench = false

[dependencies]
thiserror = "1.0.30"
anyhow    = "1.0.44"
tempfile  = "3"

protobuf = { path = "../protobuf", version = "=3.0.0-alpha.5" }
protobuf-parse = { path = "../protobuf-parse", version = "=3.0.0-alpha.5" }
protoc = { path = "../protoc", version = "=3.0.0-alpha.5" }

[[bin]]

name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust.rs"
test = false

[[bin]]

name = "protobuf-bin-gen-rust-do-not-use"
path = "src/bin/protobuf-bin-gen-rust-do-not-use.rs"
test = false

[package.metadata.docs.rs]
all-features = true
