[package]
name = "protobuf-codegen"
version = "3.2.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Code generator for rust-protobuf.

Includes a library to invoke programmatically (e. g. from `build.rs`) and `protoc-gen-rust` binary.
"""

[lib]
bench = false

[dependencies]
thiserror = "1.0.30"
anyhow    = "1.0.53"
regex     = "1.5.5"
once_cell = "1.10.0"
tempfile  = "3"

protobuf = { path = "../protobuf", version = "=3.2.0" }
protobuf-parse = { path = "../protobuf-parse", version = "=3.2.0" }

[[bin]]

name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust.rs"
test = false

[package.metadata.docs.rs]
all-features = true
