[package]
name = "protobuf-examples"
version = "0.0.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "../protobuf" }

[build-dependencies]
protobuf-codegen = { path = "../protobuf-codegen" }
