[package]
name = "protobuf-test-common"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
description = """
Common code of protobuf tests
"""

[lib]
doctest = false
bench = false

[features]
default-features = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes"]

[dependencies]
glob        = "0.2"
log         = "0.*"
env_logger  = "0.5.*"
bytes = { version = "0.4", optional = true }
# Force dependency of some crate compatible with Rust 1.23.0
lazy_static  = "1.1.*"

[dependencies.protobuf]
path = "../protobuf"

[dependencies.protobuf-codegen]
path = "../protobuf-codegen"
