[package]
name = "protobuf-test-common"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
description = """
Common code of protobuf tests
"""

[lib]
doctest = false
bench = false

[features]
default-features = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes"]
with-serde = ["serde", "protobuf/with-serde"]

[dependencies]
glob         = "0.2"
log          = "0.*"
env_logger   = "0.5.*"
# regex 1.1.8 does `#[repr(transparent)]` which is available since Rust 1.28
regex        = "=1.1.7"
# regex 0.6.11 uses library feature 'from_ref'
regex-syntax = "=0.6.10"
tempfile     = "3.0"
serde        = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json   = { version = "1.0", optional = true }
bytes = { version = "0.4", optional = true }
# lazy_static 2.1 is not compatible with rust 1.23.0
# and lazy_static is needed for some crate, I don't know which exactly
lazy_static = "1.1.*"

[dependencies.protobuf]
path = "../protobuf"

[dependencies.protobuf-codegen]
path = "../protobuf-codegen"
