[package]
name = "protobuf-test-common"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"
description = """
Common code of protobuf tests
"""

[lib]
doctest = false
bench = false

[features]
default = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes"]
with-serde = ["serde", "protobuf/with-serde"]

[dependencies]
glob         = "0.2"
log          = "0.*"
env_logger   = "0.5.*"
tempfile     = "3.0"
serde        = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json   = { version = "1.0", optional = true }
bytes = { version = "0.5", optional = true }

[dependencies.protobuf]
path = "../protobuf"

[dependencies.protobuf-codegen]
path = "../protobuf-codegen"
