[package]
name = "protobuf-test"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false

[lib]
doctest = false
bench = false

[features]
default-features = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes", "protobuf-test-common/with-bytes"]
with-serde = ["serde", "serde_derive", "serde_json", "protobuf/with-serde", "protobuf-test-common/with-serde"]

[build-dependencies]
protoc      = { path = "../protoc" }
protoc-rust = { path = "../protoc-rust" }
protobuf-test-common = { path = "../protobuf-test-common" }
glob        = "0.2"
log         = "0.*"
env_logger  = "0.5.*"

[dependencies]
protobuf-test-common = { path = "../protobuf-test-common" }
serde        = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json   = { version = "1.0", optional = true }
bytes = { version = "0.4", optional = true }

[dependencies.protobuf]
path = "../protobuf"
