[package]
name = "protobuf-test"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"

[lib]
doctest = false
bench = false

[features]
default = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes", "protobuf-test-common/with-bytes"]

[build-dependencies]
glob        = "0.2"
log         = "0.*"
env_logger  = "0.5.*"

protoc-bin-vendored = "2.27.3"

protoc      = { path = "../protoc" }
protobuf-codegen = { path = "../protobuf-codegen" }
protobuf-test-common = { path = "../protobuf-test-common" }

[dependencies]
protobuf-test-common = { path = "../protobuf-test-common" }
bytes = { version = "1.0", optional = true }

[dependencies.protobuf]
path = "../protobuf"
