[package]

name = "protobuf"
version = "4.0.0-alpha.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
documentation = "https://github.com/stepancheg/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers
"""

[lib]
bench = false

[features]
with-bytes = ["bytes"]
btreemaps = []
default = []

[dependencies]
bytes = { version = "1.1", optional = true }
cfg-if = "1.0.0"
thiserror = "1.0.30"
once_cell = "1.9.0"

protobuf-support = { path = "../protobuf-support", version = "=4.0.0-alpha.0" }

[package.metadata.docs.rs]
all-features = true
