[package]

name = "protobuf"
version = "3.7.2"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
documentation = "https://github.com/stepancheg/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers
"""

[lib]
bench = false

[features]
with-bytes = ["bytes"]
default = []

[dependencies]
bytes = { version = "1.1", optional = true }
thiserror = "1.0.30"
once_cell = "1.9.0"

protobuf-support = { path = "../protobuf-support", version = "=3.7.2" }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }
