[package]
name = "protoc-bin-vendored"
version = "3.0.0-alpha.5"
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-bin-vendored/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-bin-vendored/"
description = """
protoc binaries compiled by Google and bundled in this crate.
"""

[lib]
bench = false

[dev-dependencies]
protoc = { path = "../protoc", version = "=3.0.0-alpha.5" }

[package.metadata.docs.rs]
all-features = true
