[package]
name = "protoc-bin-vendored"
version = "2.27.1"
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-bin-vendored/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-bin-vendored/"
description = """
protoc binaries compiled by Google and bundled in this crate.
"""

[lib]
doctest = false
bench = false

[package.metadata.docs.rs]
all-features = true
