[package]
name = "protoc-rust"
version = "2.24.2"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-rust/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-rust/"
description = """
protoc --rust_out=... available as API. protoc needs to be in $PATH, protoc-gen-run does not.
"""

[lib]
doctest = false
bench = false

[dependencies]
protoc = { path = "../protoc", version = "=2.24.2" }
protobuf = { path = "../protobuf", version = "=2.24.2" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=2.24.2" }
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
