[package]
name = "protoc-rust"
version = "3.0.0-alpha.1"
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-rust/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-rust/"
description = """
protoc --rust_out=... available as API. protoc needs to be in $PATH, protoc-gen-run does not.
"""

[lib]
doctest = false
bench = false

[dependencies]
tempfile  = "3"
anyhow    = "1.0.44"
thiserror = "1.0.30"

protoc = { path = "../protoc", version = "=3.0.0-alpha.1" }
protobuf = { path = "../protobuf", version = "=3.0.0-alpha.1" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=3.0.0-alpha.1" }

[package.metadata.docs.rs]
all-features = true
