[package]
name = "protoc"
version = "3.0.0-pre"
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc/"
description = """
Protobuf protoc command as API
"""

[lib]
doctest = true
bench = false

[dependencies]
log = "0.*"
which = "2.0"

[package.metadata.docs.rs]
all-features = true
