[package]
name = "protoc"
version = "2.24.2"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc/"
description = """
Protobuf protoc command as API
"""

[lib]
doctest = false
bench = false

[dependencies]
log = "0.*"
which = "4.0"

[package.metadata.docs.rs]
all-features = true
