[package]
name = "protoc"
version = "3.0.0-alpha.3"
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc/"
description = """
Protobuf protoc command as API
"""

[lib]
doctest = true
bench = false

[dependencies]
log       = "0.*"
which     = "4.0"
anyhow    = "1.0.44"
thiserror = "1.0.30"

[package.metadata.docs.rs]
all-features = true
