[package]
name = "perftest-bytes"
version = "0.1.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false

[features]
default-features = []
with-bytes = ["bytes", "protobuf/with-bytes"]

[dependencies.protobuf]
path = "../../protobuf"

[dependencies.bytes]
version = "0.*"
optional = true


[build-dependencies]
protoc-rust = { path = "../../protoc-rust" }
