[package]
name = "protobuf-perftest-misc"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"

[lib]
test = false
doctest = false

[features]
default = []
with-bytes = ["bytes", "protobuf/with-bytes"]

[dependencies]
bytes = { version = "1.0", optional = true }
fastrand = "1.4.0"

[dependencies.protobuf]
path = "../../protobuf"
features = ["with-bytes"]

[build-dependencies]
protobuf-codegen = { path = "../../protobuf-codegen" }
