[project]
name = "rust-protobuf-perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false

[features]
default-features = []
proto3 = []
with-bytes = ["protobuf/with-bytes"]

[dependencies.protobuf]
path = "../../protobuf"

[dependencies.time]
git = "http://github.com/rust-lang/time"

[dependencies]
rand = "0.*"

[build-dependencies]
protoc-rust = { path = "../../protoc-rust" }

[[bin]]

name = "rust-protobuf-perftest"
path = "perftest.rs"
test = false
