[package]
name = "protobuf-examples-vs-prost"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
protobuf = { path = "../../protobuf" }
prost = "0.10.1"

[build-dependencies]
protobuf-codegen = { path = "../../protobuf-codegen" }
prost-build = "0.9.0"
