[workspace]

[package]
name = "test-protoc"
version = "0.0.0"
publish = false
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[lib]
test = false
doctest = false
bench = false

[dependencies]
protobuf = { path = "../../protobuf" }

[features]
default = []
# Feature to avoid recompilation of protobuf
with-bytes = ["protobuf/with-bytes"]

[build-dependencies]
anyhow = "1.0.44"

protoc = { path = ".." }
