[package]
name = "conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
protobuf = { path = "../../protobuf" }
protobuf-json-mapping = { version = "4.0.0-alpha.0", path = "../../protobuf-json-mapping" }

[build-dependencies]
protobuf-codegen = { path = "../../protobuf-codegen" }
