[package]
name = "protobuf-codegen-pure-test"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2021"
description = "Test pure codegen"

[lib]
doctest = false
bench = false

[features]
default = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes", "protobuf-test-common/with-bytes"]

[build-dependencies]
protobuf-codegen = { path = "../../protobuf-codegen" }
protobuf-test-common = { path = "../../test-crates/protobuf-test-common" }
glob        = "0.2"
log         = "0.*"
env_logger  = "0.5.*"

[dependencies]
protobuf-test-common = { path = "../../test-crates/protobuf-test-common" }
bytes = { version = "1.1", optional = true }

[dependencies.protobuf]
path = "../../protobuf"
